--- a/public/views/about.hbs
+++ b/public/views/about.hbs
@@ -9,6 +9,7 @@
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="shortcut icon" type="image/jpg" href="../images/kanishk.jpg"/>
 </head>
 <style>
     @media(max-width:920px){
