remove href from cards

--- a/public/views/about.hbs
+++ b/public/views/about.hbs
@@ -33,7 +33,7 @@
             {{!-- Cards --}}
 <div class="cards cars">
     <div>
-     <a href="#" class="card education">
+     <a  class="card education">
      <div class="overlay"></div>
   <div class="circle">
 <svg width="71px" height="76px" viewBox="29 14 71 76" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -70,7 +70,7 @@
 </a>
 </div>
 <div>
-<a href="#" class="card credentialing">
+<a  class="card credentialing">
      <div class="overlay"></div>
   <div class="circle">
     
@@ -107,7 +107,7 @@
 </a>
 </div>
 <div>
-<a href="#" class="card wallet">
+<a  class="card wallet">
      <div class="overlay"></div>
   <div class="circle">
     
@@ -132,7 +132,7 @@
 </a>
 </div>
 <div>
-<a href="#" class="card human-resources">
+<a  class="card human-resources">
      <div class="overlay"></div>
   <div class="circle">
      
