create separate module for routing

--- a/public/views/covid.hbs
+++ b/public/views/covid.hbs
@@ -25,20 +25,20 @@
             <div class="card" style="width: 18rem;">
   <img id="first-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-first" class="card-text">No.1</h6>
-    <h5 id="country-first" class="card-title">Card title</h5>
-    <h6 id="first-case" class="card-text">No.1</h6>
-    <h6 id="first-death" class="card-text">No.1</h6>
+    <h6 id="no-first" class="card-text">Error loading...</h6>
+    <h5 id="country-first" class="card-title">Error loading...</h5>
+    <h6 id="first-case" class="card-text">Error loading...</h6>
+    <h6 id="first-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 {{!-- Card2 --}}
 <div class="card" style="width: 18rem;">
   <img id="sec-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-sec" class="card-text">No.1</h6>
-    <h5 id="country-sec" class="card-title">Card title</h5>
-    <h6 id="sec-case" class="card-text">No.1</h6>
-    <h6 id="sec-death" class="card-text">No.1</h6>
+    <h6 id="no-sec" class="card-text">Error loading...</h6>
+    <h5 id="country-sec" class="card-title">Error loading...</h5>
+    <h6 id="sec-case" class="card-text">Error loading...</h6>
+    <h6 id="sec-death" class="card-text">Error loading...</h6>
   </div>
 </div>
             </div>
@@ -47,20 +47,20 @@
 <div class="card" style="width: 18rem;">
   <img id="third-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-third" class="card-text">No.1</h6>
-    <h5 id="country-third" class="card-title">Card title</h5>
-    <h6 id="third-case" class="card-text">No.1</h6>
-    <h6 id="third-death" class="card-text">No.1</h6>
+    <h6 id="no-third" class="card-text">Error loading...</h6>
+    <h5 id="country-third" class="card-title">Error loading...</h5>
+    <h6 id="third-case" class="card-text">Error loading...1</h6>
+    <h6 id="third-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 {{!-- Card-4 --}}
 <div class="card" style="width: 18rem;">
    <img id="four-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-four" class="card-text">No.1</h6>
-    <h5 id="country-four" class="card-title">Card title</h5>
-    <h6 id="four-case" class="card-text">No.1</h6>
-    <h6 id="four-death" class="card-text">No.1</h6>
+    <h6 id="no-four" class="card-text">Error loading...</h6>
+    <h5 id="country-four" class="card-title">Error loading...</h5>
+    <h6 id="four-case" class="card-text">Error loading...</h6>
+    <h6 id="four-death" class="card-text">Error loading...</h6>
   </div>
   </div>
 </div>
@@ -69,20 +69,20 @@
 <div class="card" style="width: 18rem;">
   <img id="fifth-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-fifth" class="card-text">No.1</h6>
-    <h5 id="country-fifth" class="card-title">Card title</h5>
-    <h6 id="fifth-case" class="card-text">No.1</h6>
-    <h6 id="fifth-death" class="card-text">No.1</h6>
+    <h6 id="no-fifth" class="card-text">Error loading...</h6>
+    <h5 id="country-fifth" class="card-title">Error loading...</h5>
+    <h6 id="fifth-case" class="card-text">Error loading...</h6>
+    <h6 id="fifth-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 {{!-- Card-6 --}}
 <div class="card" style="width: 18rem;">
  <img id="six-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-six" class="card-text">No.1</h6>
-    <h5 id="country-six" class="card-title">Card title</h5>
-    <h6 id="six-case" class="card-text">No.1</h6>
-    <h6 id="six-death" class="card-text">No.1</h6>
+    <h6 id="no-six" class="card-text">Error loading...</h6>
+    <h5 id="country-six" class="card-title">Error loading...</h5>
+    <h6 id="six-case" class="card-text">Error loading...</h6>
+    <h6 id="six-death" class="card-text">Error loading...</h6>
   </div>
   </div>
 </div>
@@ -91,20 +91,20 @@
 <div class="card" style="width: 18rem;">
   <img id="seven-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-seven" class="card-text">No.1</h6>
-    <h5 id="country-seven" class="card-title">Card title</h5>
-    <h6 id="seven-case" class="card-text">No.1</h6>
-    <h6 id="seven-death" class="card-text">No.1</h6>
+    <h6 id="no-seven" class="card-text">Error loading...</h6>
+    <h5 id="country-seven" class="card-title">Error loading...</h5>
+    <h6 id="seven-case" class="card-text">Error loading...</h6>
+    <h6 id="seven-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 {{!-- Card-8 --}}
 <div class="card" style="width: 18rem;">
   <img id="eight-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-eight" class="card-text">No.1</h6>
-    <h5 id="country-eight" class="card-title">Card title</h5>
-    <h6 id="eight-case" class="card-text">No.1</h6>
-    <h6 id="eight-death" class="card-text">No.1</h6>
+    <h6 id="no-eight" class="card-text">Error loading...</h6>
+    <h5 id="country-eight" class="card-title">Error loading...</h5>
+    <h6 id="eight-case" class="card-text">Error loading...</h6>
+    <h6 id="eight-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 </div>
@@ -113,20 +113,20 @@
 <div class="card" style="width: 18rem;">
   <img id="nine-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-nine" class="card-text">No.1</h6>
-    <h5 id="country-nine" class="card-title">Card title</h5>
-    <h6 id="nine-case" class="card-text">No.1</h6>
-    <h6 id="nine-death" class="card-text">No.1</h6>
+    <h6 id="no-nine" class="card-text">Error loading...</h6>
+    <h5 id="country-nine" class="card-title">Error loading...</h5>
+    <h6 id="nine-case" class="card-text">Error loading...</h6>
+    <h6 id="nine-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 {{!-- Card-10 --}}
 <div class="card" style="width: 18rem;">
   <img id="ten-img" src="..." class="card-img-top" alt="...">
   <div class="card-body">
-    <h6 id="no-ten" class="card-text">No.1</h6>
-    <h5 id="country-ten" class="card-title">Card title</h5>
-    <h6 id="ten-case" class="card-text">No.1</h6>
-    <h6 id="ten-death" class="card-text">No.1</h6>
+    <h6 id="no-ten" class="card-text">Error loading...</h6>
+    <h5 id="country-ten" class="card-title">Error loading...</h5>
+    <h6 id="ten-case" class="card-text">Error loading...</h6>
+    <h6 id="ten-death" class="card-text">Error loading...</h6>
   </div>
 </div>
 </div>
